--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -1,6 +1,11 @@
 @use 'sass-utils/variables' as *;
 @use 'sass-utils/mixins' as *;
 
+:host {
+  display: block;
+  flex-shrink: 0;
+}
+
 .topbar {
   display: flex;
   align-items: center;
@@ -9,11 +14,8 @@
   padding: 0 $page-margin-mobile;
   background: var(--md-surface-container-lowest);
   border-bottom: 1px solid var(--md-outline-variant);
-  position: sticky;
-  top: 0;
-  z-index: $z-index-sticky;
 
-  @include respond-to(md) {
+  @include desktop-up {
     padding: 0 $page-margin-desktop;
   }
 
